final fix for flickering on touch devices

--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -2,12 +2,13 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  height: 100vh;
   font-family: sans-serif;
   font-weight: 300;
   background-color: black;
   color: white;
 }
 
-div, body, html {
+div, body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
